--- a/web.xml
+++ b/web.xml
@@ -15,6 +15,10 @@
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>com.Songzhiyongweek3.RegisterServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>JDBCDemoServlet</servlet-name>
+        <servlet-class>com.Songzhiyong.week4.JDBCDemoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Songzhiyong</servlet-name>
         <url-pattern>/hello.html</url-pattern>
@@ -22,6 +26,10 @@
     <servlet-mapping>
         <servlet-name>LifeCycleServlet</servlet-name>
         <url-pattern>/life</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>JDBCDemoServlet</servlet-name>
+        <url-pattern>/jdbc</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
